--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,71 +1,29 @@
-image: atlassian/default-image:3
+ image: node:20
 
 pipelines:
   default:
     - step:
-        name: Build & Test
+        name: Week1 - Build & Test
         caches:
           - node
-          - pip
         script:
-          - echo "Starting CI"
-          - echo "Node version:" && node --version || true
-          - echo "NPM version:" && npm --version || true
-          - echo "Python version:" && python --version || true
-          - echo "Pip version:" && pip --version || true
-          # Node projects
-          - |
-            if [ -f package.json ]; then
-              echo "Detected package.json -> installing deps and running tests"
-              npm ci || npm install
-              npm test || echo "npm test not configured"
-            else
-              echo "No package.json found - skipping Node build"
-            fi
-          # Python projects
-          - |
-            if [ -f requirements.txt ]; then
-              echo "Detected requirements.txt -> installing deps and running pytest if present"
-              python -m pip install --upgrade pip
-              pip install -r requirements.txt
-              if [ -f pytest.ini ] || [ -f tox.ini ] || [ -d tests ]; then
-                pytest -q || echo "pytest not configured"
-              fi
-            else
-              echo "No requirements.txt found - skipping Python install"
-            fi
-          # Generic Makefile support
-          - |
-            if [ -f Makefile ]; then
-              echo "Detected Makefile -> running 'make test' if present"
-              make -n test >/dev/null 2>&1 && make test || echo "no 'make test' target"
-            fi
+          - echo "Starting Week1 CI"
+          - cd week1
+          - node --version && npm --version
+          - npm ci || npm install
+          - npm test -- --run || echo "No tests configured"
+          - npm run build
 
   branches:
     main:
       - step:
-          name: Main - Build & Test
+          name: Main - Week1 Build & Test
           caches:
             - node
-            - pip
           script:
-            - echo "Main branch CI"
-            - echo "Node version:" && node --version || true
-            - echo "Python version:" && python --version || true
-            - |
-              if [ -f package.json ]; then
-                npm ci || npm install
-                npm test || echo "npm test not configured"
-              fi
-            - |
-              if [ -f requirements.txt ]; then
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-                if [ -f pytest.ini ] || [ -f tox.ini ] || [ -d tests ]; then
-                  pytest -q || echo "pytest not configured"
-                fi
-              fi
-
-definitions:
-  caches:
-    pip: ~/.cache/pip
+            - echo "Main branch CI for Week1"
+            - cd week1
+            - node --version && npm --version
+            - npm ci || npm install
+            - npm test -- --run || echo "No tests configured"
+            - npm run build
