--- a/week1-api/package.json
+++ b/week1-api/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^6.0.3",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.0.0",
     "ts-node-dev": "^2.0.0",
