--- a/week1/package.json
+++ b/week1/package.json
@@ -20,7 +20,10 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.23",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^24.0.0",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.4.0",
     "vite": "^5.4.0",
     "vitest": "^1.5.0"
