ENV.EXAMPLE edited online with Bitbucket

--- a/week1-api/ENV.EXAMPLE
+++ b/week1-api/ENV.EXAMPLE
@@ -2,8 +2,8 @@
 # Copy to .env and fill values before starting server
 
 PORT=4000
-MONGO_URI=mongodb://localhost:27017/compliance_week1
-JWT_SECRET=change_me_secure
+USE_INMEMORY_DB=true
+MONGO_URI=mongodb://localhost:27017/compliance_week1   # unused in in-memory mode
+JWT_SECRET=choose_a_strong_secret
+FIELD_ENCRYPTION_KEY=<paste 32-byte base64>
 CORS_ORIGIN=http://localhost:5173
-# 32-byte random key base64-encoded, e.g., `openssl rand -base64 32`
-FIELD_ENCRYPTION_KEY=REPLACE_WITH_BASE64_32_BYTES
