ENV.EXAMPLE edited online with Bitbucket

--- a/week1-api/ENV.EXAMPLE
+++ b/week1-api/ENV.EXAMPLE
@@ -7,3 +7,4 @@ MONGO_URI=mongodb://localhost:27017/compliance_week1   # unused in in-memory mod
 JWT_SECRET=choose_a_strong_secret
 FIELD_ENCRYPTION_KEY=<paste 32-byte base64>
 CORS_ORIGIN=http://localhost:5173
+USE_INMEMORY_DB=true
