ENV.EXAMPLE edited online with Bitbucket

--- a/week1-api/ENV.EXAMPLE
+++ b/week1-api/ENV.EXAMPLE
@@ -1,9 +1,12 @@
-# Week1 API example environment
-# Copy to .env and fill values before starting server
-
 PORT=4000
 USE_INMEMORY_DB=true
-MONGO_URI=mongodb://localhost:27017/compliance_week1   # unused in in-memory mode
+
+# Unused when in-memory, fine to keep:
+MONGO_URI=mongodb://localhost:27017/compliance_week1
+
+# Secrets (must be real values)
 JWT_SECRET=choose_a_strong_secret
-FIELD_ENCRYPTION_KEY=<paste 32-byte base64>
+FIELD_ENCRYPTION_KEY=<paste 32-byte base64>  # generate below
+
+# Must match your frontend origin
 CORS_ORIGIN=http://localhost:5173
