--- a/week1/package.json
+++ b/week1/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "@heroicons/react": "^2.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
