--- a/week2-api/ENV.EXAMPLE
+++ b/week2-api/ENV.EXAMPLE
@@ -5,8 +5,11 @@ MONGO_URI=
 # JWT secret for signing tokens
 JWT_SECRET=change-me
 # CORS origin for frontend (e.g., Netlify URL)
-CORS_ORIGIN=http://localhost:5173
+CORS_ORIGIN=http://localhost:5174
 # Optional: force in-memory DB (true/false). If empty and MONGO_URI not set, falls back to in-memory.
 USE_INMEMORY_DB=
 # 32-byte hex key (optional for future encrypted fields)
 FIELD_ENCRYPTION_KEY=
+# Optional: AI generation
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
