--- a/week2/package.json
+++ b/week2/package.json
@@ -4,16 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 5174",
     "build": "tsc -b && vite build",
-    "preview": "vite preview --open"
+    "preview": "vite preview --open",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "@tanstack/react-query": "^5.51.23",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-hot-toast": "^2.4.1",
+    "dompurify": "^3.1.6",
+    "diff": "^5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
@@ -21,6 +25,9 @@
     "@types/react-dom": "^18.2.23",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.4.0",
-    "vite": "^5.4.0"
+    "vite": "^5.4.0",
+    "vitest": "^1.6.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/diff": "^5.2.0"
   }
 }
