--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,8 @@ pipelines:
         script:
           - echo "Starting Week1 CI"
           - cd week1
-          - node --version && npm --version
+          - node --version
+          - npm --version
           - npm ci || npm install
           - npm test -- --run || echo "No tests configured"
           - npm run build
@@ -20,7 +21,8 @@ pipelines:
         script:
           - echo "Week2 frontend CI"
           - cd week2
-          - node --version && npm --version
+          - node --version
+          - npm --version
           - npm ci || npm install
           - npm run build
     - step:
@@ -30,7 +32,8 @@ pipelines:
         script:
           - echo "Backend CI"
           - cd week1-api
-          - node --version && npm --version
+          - node --version
+          - npm --version
           - npm ci || npm install
           - npm test -- --run || echo "No backend tests configured"
           - npm run build
@@ -41,7 +44,8 @@ pipelines:
         script:
           - echo "Week2 API CI"
           - cd week2-api
-          - node --version && npm --version
+          - node --version
+          - npm --version
           - npm ci || npm install
           - npm run build
 
@@ -54,7 +58,8 @@ pipelines:
           script:
             - echo "Main branch CI for Week1"
             - cd week1
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm test -- --run || echo "No tests configured"
             - npm run build
@@ -66,7 +71,8 @@ pipelines:
           script:
             - echo "Main branch CI for Week2 frontend"
             - cd week2
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
       - step:
@@ -76,7 +82,8 @@ pipelines:
           script:
             - echo "Main branch CI for Week1 API"
             - cd week1-api
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm test -- --run || echo "No backend tests configured"
             - npm run build
@@ -88,7 +95,8 @@ pipelines:
           script:
             - echo "Main branch CI for Week2 API"
             - cd week2-api
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
 
@@ -99,9 +107,10 @@ pipelines:
           caches:
             - node
           script:
-            - echo "Dev branch: build Week2 frontend"
+            - echo Dev_frontend_build
             - cd week2
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
       - step:
@@ -110,9 +119,10 @@ pipelines:
           caches:
             - node
           script:
-            - echo "Dev branch: build Week2 API"
+            - echo Dev_API_build
             - cd week2-api
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
 
@@ -123,9 +133,10 @@ pipelines:
           caches:
             - node
           script:
-            - echo "UAT branch: build Week2 frontend"
+            - echo UAT_frontend_build
             - cd week2
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
       - step:
@@ -134,9 +145,10 @@ pipelines:
           caches:
             - node
           script:
-            - echo "UAT branch: build Week2 API"
+            - echo UAT_API_build
             - cd week2-api
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
 
@@ -147,9 +159,10 @@ pipelines:
           caches:
             - node
           script:
-            - echo "Production branch: build Week2 frontend"
+            - echo Production_frontend_build
             - cd week2
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
       - step:
@@ -158,9 +171,10 @@ pipelines:
           caches:
             - node
           script:
-            - echo "Production branch: build Week2 API"
+            - echo Production_API_build
             - cd week2-api
-            - node --version && npm --version
+            - node --version
+            - npm --version
             - npm ci || npm install
             - npm run build
 
