--- a/week2-api/package.json
+++ b/week2-api/package.json
@@ -13,13 +13,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
+    "json2csv": "^5.0.7",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^9.0.0",
     "mongoose": "^7.6.1",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.30",
     "@types/supertest": "^2.0.16",
     "supertest": "^6.3.3",
