--- a/week2/package.json
+++ b/week2/package.json
@@ -17,7 +17,8 @@
     "zod": "^3.23.8",
     "react-hot-toast": "^2.4.1",
     "dompurify": "^3.1.6",
-    "diff": "^5.2.0"
+    "diff": "^5.2.0",
+    "html2pdf.js": "^0.10.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
