--- a/week2-api/package.json
+++ b/week2-api/package.json
@@ -23,6 +23,7 @@
     "mongodb-memory-server": "^9.0.0",
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^14.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
