feat(db): allow on-disk persistence for in-memory Mongo via MEMORY_DB_PERSIST_PATH; update ENV example; polish settings cards

--- a/week2-api/ENV.EXAMPLE
+++ b/week2-api/ENV.EXAMPLE
@@ -8,6 +8,8 @@ JWT_SECRET=change-me
 CORS_ORIGIN=http://localhost:5174
 # Optional: force in-memory DB (true/false). If empty and MONGO_URI not set, falls back to in-memory.
 USE_INMEMORY_DB=
+# Optional: persist the in-memory DB to disk (no admin required). Relative path is resolved from week2-api/ cwd.
+MEMORY_DB_PERSIST_PATH=.mongo-data
 # 32-byte hex key (optional for future encrypted fields)
 FIELD_ENCRYPTION_KEY=
 # Optional: AI generation
