--- a/week2-api/ENV.EXAMPLE
+++ b/week2-api/ENV.EXAMPLE
@@ -15,3 +15,15 @@ FIELD_ENCRYPTION_KEY=
 # Optional: AI generation
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
+
+# Stripe (test mode)
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_PRICE_ID=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_SUCCESS_URL=http://localhost:5174/?billing=success
+STRIPE_CANCEL_URL=http://localhost:5174/?billing=cancel
+STRIPE_PORTAL_RETURN_URL=http://localhost:5174/settings
+
+# Demo mode: simulate billing without real keys (for local demos)
+STRIPE_DEMO_MODE=false
